<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app.compare_my_trade.ui.postauthenticationui.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_favoriteFragment"
            app:destination="@id/favoriteFragment"
            app:popUpTo="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_manage_bids"
        android:name="com.app.compare_my_trade.ui.postauthenticationui.ui.managebids.ManageBidsFragment"
        android:label="@string/title_manage_bids"
        tools:layout="@layout/fragment_manage_bids" >
        <action
            android:id="@+id/action_navigation_dashboard_to_favoriteFragment"
            app:destination="@id/favoriteFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.app.compare_my_trade.ui.postauthenticationui.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.app.compare_my_trade.ui.postauthenticationui.ui.FavoriteFragment"
        android:label="My Favourites"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_more"
        android:name="com.app.compare_my_trade.ui.postauthenticationui.ui.moreoptions.MoreOptionsFragment"
        android:label="@string/title_more_option"
        tools:layout="@layout/fragment_more_options" />
</navigation>