<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="moreOptionsViewModel"
            type="com.app.compare_my_trade.ui.postauthenticationui.ui.moreoptions.MoreOptionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.postauthenticationui.ui.moreoptions.MoreOptionsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_moreItems"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/materialTextView3"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3"
            tools:listitem="@layout/item_more" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/ic_rectangle_more_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_more_options">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/mulish_bold"
                android:text="@string/test_name"
                android:textColor="@color/colorProfileTextColor"
                android:textFontWeight="700"
                android:textSize="@dimen/text16sp"
                app:layout_constraintStart_toEndOf="@+id/siv_profile"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/mulish_extralight"
                android:text="@string/test_mail"
                android:textColor="@color/colorProfileTextColor"
                android:textFontWeight="400"
                android:textSize="@dimen/text14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/siv_profile"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/siv_editProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:background="@drawable/ic_profile_edit"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/siv_profile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@mipmap/profile_icon"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/rounded_corner" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mulish_black"
            android:text="@string/miscellaneous"
            android:textColor="@color/colorMoreOptionsHeader"
            android:textFontWeight="600"
            android:textSize="@dimen/text14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/text_more_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/mulish_semibold"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textColor="@color/colorCardFeaturedText"
            android:textSize="@dimen/text14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>